--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^11.13.5",
     "graphql-request": "^7.1.2",
+    "he": "^1.2.0",
     "next": "^15.1.0",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
@@ -18,6 +19,7 @@
     "swiper": "^11.1.15"
   },
   "devDependencies": {
+    "@types/he": "^1.2.3",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19.0.1",
