--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cleave.js": "^1.6.0",
     "framer-motion": "^11.13.5",
     "graphql-request": "^7.1.2",
     "he": "^1.2.0",
@@ -19,11 +20,13 @@
     "swiper": "^11.1.15"
   },
   "devDependencies": {
+    "@types/cleave.js": "^1.4.12",
     "@types/he": "^1.2.3",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "@types/react-input-mask": "^3.0.6",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.0",
     "postcss": "^8",
