--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "cleave.js": "^1.6.0",
     "framer-motion": "^11.13.5",
     "graphql-request": "^7.1.2",
