--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "algoliasearch": "^5.20.0",
     "axios": "^1.7.9",
     "cleave.js": "^1.6.0",
     "framer-motion": "^11.13.5",
     "graphql-request": "^7.1.2",
     "he": "^1.2.0",
+    "instantsearch.css": "^8.5.1",
+    "instantsearch.js": "^4.77.1",
     "next": "^15.1.0",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
